--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent"
+    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "migrate": "knex migrate: latest",
+    "rollback": "knex migrate: rollback",
+    "seed": "knex seed: run"
   },
   "repository": {
     "type": "git",
@@ -15,5 +20,13 @@
     "eslint": "8.4.1",
     "jest": "27.4.3",
     "supertest": "6.1.6"
+  },
+  "dependencies": {
+    "@vscode/sqlite3": "^5.0.7",
+    "cleaner": "^2.0.0-alpha",
+    "express": "^4.17.2",
+    "knex": "^1.0.2",
+    "nodemon": "^2.0.15",
+    "sqlite3": "^5.0.2"
   }
 }
